--- a/index.html
+++ b/index.html
@@ -1,19 +1,52 @@
 <!doctype html>
 <html lang="nl">
-	
+
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="author" content="Moon Warmer">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>Howdy</title>
-	
+
+	<style>
+	@import url('https://fonts.googleapis.com/css2?family=Mr+De+Haviland&display=swap');
+	</style>
+
+	<title>By Nouck</title>
+
 	<link href="styles/style.css" rel="stylesheet">
+
 </head>
 
 <body>
-	<h1>Howdy</h1>
-	<script src="scripts/script.js"></script>
-</body>
-	
+	<img class="logo" src="images/foto.webp" alt="logo">
+
+
+<!--header-->
+
+  <header>
+  </header>
+
+
+     <!-- Main content -->
+    <main>
+
+      <section>
+		<img src="images/j&mnecklace.png" alt="foto ketting">
+		<div>
+        <p> New in...</p>
+        <h2> Custom Engravings</h2>
+        <p>Our engraving collection connects you to your most precious memories, people and milestones.
+          </p>
+        <a href class = 'button'>ENGRAVE YOUR OWN</a>
+			</div>
+
+			<section>
+				<h3>Suggestions for you</h3>
+
+				<!--grid-->
+				<a href class = 'button2'>SHOW ALL SUGGESTIONS</a>
+    </main>
+    <footer>
+    </footer>
+			<script src="scripts/script.js"></script>
+  </body>
 </html>
