--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
 	<meta name="author" content="Moon Warmer">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<style>
-	@import url('https://fonts.googleapis.com/css2?family=Mr+De+Haviland&display=swap');
-	</style>
 
 	<title>By Nouck</title>
 
@@ -23,30 +20,88 @@
 <!--header-->
 
   <header>
+		<nav>
+			<ul>
+				<li><a href="https://bynouck.com/collections/new">NEW</a></li>
+				<li><a href="https://bynouck.com/collections/earrings">EARRINGS</a></li>
+				<li><a href="https://bynouck.com/collections/charms">COLLECTIONS</a></li>
+				<li><a href="https://bynouck.com/collections/necklaces">NECKLACES</a></li>
+				<li><a href="https://bynouck.com/collections/initials">INITIALS</a></li>
+				<li><a href="https://bynouck.com/collections/engraving">ENGRAVINGS</a></li>
+				<li><a href="https://bynouck.com/collections/bracelets">BRACELETS</a></li>
+				<li><a href="https://bynouck.com/collections/silver">SILVER</a></li>
+				<li><a href="https://bynouck.com/collections/sale">SALE</a></li>
+			</ul>
+		</nav>
   </header>
 
 
      <!-- Main content -->
+
     <main>
 
       <section>
-		<img src="images/j&mnecklace.png" alt="foto ketting">
+		<img src="images/nieuwefoto.webp" alt="foto ketting">
 		<div>
         <p> New in...</p>
         <h2> Custom Engravings</h2>
         <p>Our engraving collection connects you to your most precious memories, people and milestones.
           </p>
-        <a href class = 'button'>ENGRAVE YOUR OWN</a>
+        <a href>ENGRAVE YOUR OWN</a>
 			</div>
+		</section>
 
-			<section>
+		<section>
 				<h3>Suggestions for you</h3>
+				<article>
+						<h4>1.5 cm Twisted Hoop</h4>
+					<img src="images/hoop.webp" alt="hoop">
+							<p>€16,00<p>
+							<a href="https://bynouck.com/products/1-5-cm-twisted-hoop">View product</a>
+							<a href="https://bynouck.com/products/1-5-cm-twisted-hoop"><img src='images/loop.svg' alt='view product'/></a>
+						</article>
+							<article>
+					<img src="images/oorbelroze.webp" alt="oorbelroze">
+				<h4>Earring Neon Pink Bead</h4>
+							<p>€16,00<p>
+					<a href="https://bynouck.com/products/earring-neon-pink-bead">View product</a>
+					<a href="https://bynouck.com/products/earring-neon-pink-bead"><img src='images/loop.svg' alt='view product'/></a>
+				</article>
+					<article>
+					<img src="images/oorbelwit.webp" alt="oorbelwit">
+					<h4>Earring White Bead</h4>
+							<p>€16,00<p>
+									<a href="https://bynouck.com/products/earring-white-bead">View product</a>
+									<a href="https://bynouck.com/products/earring-white-bead"><img src='images/loop.svg' alt='view product'/></a>
+								</article>
+									<article>
+					<img src="images/oorbelgroen.webp" alt="oorgbelgroen">
+					<h4>Earpin Green Bead</h4>
+					<p>€14,40</p>
+						<a class="view" href="view">View product</a>
+						<a href="view"><img src='images/loop.svg' alt='view product'/></a>
+					</article>
+					<a href>SHOW ALL SUGGESTIONS</a>
+</section>
 
-				<!--grid-->
-				<a href class = 'button2'>SHOW ALL SUGGESTIONS</a>
+
+<section>
+
+	<img src="images/plaatjescheef.png" alt="scheef plaatje">
+	<div>
+		<h2>Handmade with love</h2>
+		<p>Our designs are filled with hidden treasures and tiny details ready to take you on a special journey.
+			From pearls and rhinestones to initials. Enjoy our handmade jewellery everyday. Each order is being handcrafted
+			upon request in our Haarlem Atelier.</p>
+			<a href >SHOP NEW</a>
+	</div>
+
+</section>
     </main>
+
     <footer>
     </footer>
+
 			<script src="scripts/script.js"></script>
   </body>
 </html>
