--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 <!--header-->
 
   <header>
-		<nav>
+		<nav class='hamburger' >
+			<button arial-label='menu button'>&#9776;</button>
 			<ul>
 				<li><a href="https://bynouck.com/collections/new">NEW</a></li>
 				<li><a href="https://bynouck.com/collections/earrings">EARRINGS</a></li>
@@ -47,7 +48,7 @@
         <h2> Custom Engravings</h2>
         <p>Our engraving collection connects you to your most precious memories, people and milestones.
           </p>
-        <a href>ENGRAVE YOUR OWN</a>
+        <a href='https://bynouck.com/collections/engraving'>ENGRAVE YOUR OWN</a>
 			</div>
 		</section>
 
@@ -78,7 +79,7 @@
 					<img src="images/oorbelgroen.webp" alt="oorgbelgroen">
 					<h4>Earpin Green Bead</h4>
 					<p>€14,40</p>
-						<a class="view" href="view">View product</a>
+						<a href="view">View product</a>
 						<a href="view"><img src='images/loop.svg' alt='view product'/></a>
 					</article>
 					<a href>SHOW ALL SUGGESTIONS</a>
@@ -93,10 +94,38 @@
 		<p>Our designs are filled with hidden treasures and tiny details ready to take you on a special journey.
 			From pearls and rhinestones to initials. Enjoy our handmade jewellery everyday. Each order is being handcrafted
 			upon request in our Haarlem Atelier.</p>
-			<a href >SHOP NEW</a>
+			<a href='https://bynouck.com/collections/new' >SHOP NEW</a>
 	</div>
 
 </section>
+
+<section>
+
+<img src="images/oorbelwit.webp" alt="foto witte oorbel">
+<div>
+	<h1>Earring White Bead</h1>
+	<p>€16,00</p>
+	<p>Price per piece (1)</p>
+	<p>For an earring set, please order 2 ore more items</p>
+
+	<img src="images/sterretjeeg.svg" alt="sterretje">
+	<p>EG-077</p>
+
+	<p>This classic BY★NOUCK piece goes perfect with all our golden and natural items. Also available as an <b>earring</b>.
+		 Mix and match with our other items.</p>
+		 <a href>add to cart</a>
+
+<ul>
+	<li>Spend €75,00 and get 35% off! Code: MERRYXMAS</li>
+	<li>Free Track & Trace shipping over € 75*</li>
+	<li>Handmade with love</li>
+	<li>High quality gold plated</li>
+</ul>
+
+</div>
+
+</section>
+
     </main>
 
     <footer>
