--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
 </head>
 
 <body>
-	<img class="logo" src="images/foto.webp" alt="logo">
 
 
 <!--header-->
 
   <header>
+		<p><strong>Spend €75,00 and get 35% off code: MERRYXMAS</strong></p>
+			<img class="logo" src="images/foto.webp" alt="logo">
 		<nav class='hamburger' >
 			<button arial-label='menu button'>&#9776;</button>
+			<a href="https://bynouck.com/products/1-5-cm-twisted-hoop"><img src='images/zoek.svg' alt='zoek'/></a>
+			<a href="https://bynouck.com/account/login"><img src='images/favorieten.svg' alt='favorieten'/></a>
+			<a href="https://bynouck.com/products/1-5-cm-twisted-hoop"><img src='images/winkelmandje.svg' alt='winkelmandje'/></a>
 			<ul>
 				<li><a href="https://bynouck.com/collections/new">NEW</a></li>
 				<li><a href="https://bynouck.com/collections/earrings">EARRINGS</a></li>
@@ -108,8 +112,7 @@
 	<p>Price per piece (1)</p>
 	<p>For an earring set, please order 2 ore more items</p>
 
-	<img src="images/sterretjeeg.svg" alt="sterretje">
-	<p>EG-077</p>
+	<p><em>EG-077</em></p>
 
 	<p>This classic BY★NOUCK piece goes perfect with all our golden and natural items. Also available as an <b>earring</b>.
 		 Mix and match with our other items.</p>
@@ -129,7 +132,49 @@
     </main>
 
     <footer>
-    </footer>
+
+			<!-- <img class="logo" src="images/foto.webp" alt="logo"> -->
+<div>
+<ul>
+	<p>OUR COLLECTION</p>
+	<li>Earrings</li>
+	<li>Necklaces</li>
+	<li>Initials</li>
+	<li>Bracelets</li>
+	<li>Earparty</li>
+	<li>Anklets</li>
+	<li>Silver</li>
+</ul>
+
+<ul>
+	<p>INFORMATION</p>
+	<li>Our Story</li>
+	<li>Terms & Conditions</li>
+	<li>Privacy policy</li>
+	<li>Job Offers</li>
+	<li>Contact</li>
+	<li>Wholesale</li>
+</ul>
+
+<ul>
+	<p>CUSTOMER SERVICE</p>
+	<li>Contact</li>
+	<li>FAQ</li>
+	<li>Shipping info</li>
+	<li>Return Policy</li>
+</ul>
+
+<ul>
+	<p>ABOUT BY★NOUCK</p>
+
+	<p><em>Kleine Houtstraat 15, 2011 DD Haarlem, The Netherlands</em></p>
+	
+	<li>*Free shipping only applicable for selected countries.</li>
+</ul>
+</div>
+
+
+		</footer>
 
 			<script src="scripts/script.js"></script>
   </body>
