--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
           </p>
         <a href='https://bynouck.com/collections/engraving'>ENGRAVE YOUR OWN</a>
 			</div>
-		</section>
+			</section>
 
-		<section>
+			<section>
 				<h3>Suggestions for you</h3>
 				<article>
 						<h4>1.5 cm Twisted Hoop</h4>
@@ -76,7 +76,7 @@
 					<h4>Earring White Bead</h4>
 							<p>€16,00<p>
 									<a href="https://bynouck.com/products/earring-white-bead">View product</a>
-									<a href="https://bynouck.com/products/earring-white-bead"><img src='images/loop.svg' alt='view product'/></a>
+									<a href="detail.html"><img src='images/loop.svg' alt='view product'/></a>
 								</article>
 									<article>
 					<img src="images/oorbelgroen.webp" alt="oorgbelgroen">
@@ -86,90 +86,93 @@
 						<a href="view"><img src='images/loop.svg' alt='view product'/></a>
 					</article>
 					<a href>SHOW ALL SUGGESTIONS</a>
-</section>
+			</section>
 
 
-<section>
+			<section>
 
-	<img src="images/plaatjescheef.png" alt="scheef plaatje">
-	<div>
-		<h2>Handmade with love</h2>
-		<p>Our designs are filled with hidden treasures and tiny details ready to take you on a special journey.
-			From pearls and rhinestones to initials. Enjoy our handmade jewellery everyday. Each order is being handcrafted
-			upon request in our Haarlem Atelier.</p>
-			<a href='https://bynouck.com/collections/new' >SHOP NEW</a>
-	</div>
+				<img src="images/plaatjescheef.png" alt="scheef plaatje">
+				<div>
+				<h2>Handmade with love</h2>
+				<p>Our designs are filled with hidden treasures and tiny details ready to take you on a special journey.
+					From pearls and rhinestones to initials. Enjoy our handmade jewellery everyday. Each order is being handcrafted
+					upon request in our Haarlem Atelier.</p>
+				<a href='https://bynouck.com/collections/new' >SHOP NEW</a>
+				</div>
 
-</section>
+			</section>
 
-<section>
+			<section>
 
-	<img src="images/oorbelwit.webp" alt="foto witte oorbel">
-	<div>
-		<h1>Earring White Bead</h1>
-		<p>€16,00</p>
-		<p>Price per piece (1)</p>
-		<p>For an earring set, please order 2 ore more items</p>
-		<p><em>EG-077</em></p>
-		<p>This classic BY★NOUCK piece goes perfect with all our golden and natural items. Also available as an <b>earring</b>.
-			 Mix and match with our other items.</p>
-			 <a href>add to cart</a>
-		<ul>
-			<li>Spend €75,00 and get 35% off! Code: MERRYXMAS</li>
-			<li>Free Track & Trace shipping over € 75*</li>
-			<li>Handmade with love</li>
-			<li>High quality gold plated</li>
-		</ul>
+				<img src="images/oorbelwit.webp" alt="witte oorbel">
+				<div>
+					<img src="images/oorbelwit.webp" alt="witte oorbel">
+					<img src="images/meerdereoorbellen.webp" alt='meerdere oorbellen'>
+					<img src="images/oor1.webp" alt="oor foto 1">
+					<img src="images/oor2.webp" alt='oor foto 2'>
+				</div>
+				<div>
+					<h1>Earring White Bead</h1>
+					<p>€16,00</p>
+					<p>Price per piece (1)</p>
+					<p>For an earring set, please order 2 ore more items</p>
+					<p><em>EG-077</em></p>
+					<p>This classic BY★NOUCK piece goes perfect with all our golden and natural items. Also available as an <b>earring</b>.
+						 Mix and match with our other items.</p>
+						 <a href>add to cart</a>
+					<p><em>To Wishlist</em></p>
+					<ul>
+						<li>Spend €75,00 and get 35% off! Code: MERRYXMAS</li>
+						<li>Free Track & Trace shipping over € 75*</li>
+						<li>Handmade with love</li>
+						<li>High quality gold plated</li>
+					</ul>
 
-	</div>
+				</div>
 
-</section>
+			 </section>
 
-    </main>
+  </main>
 
-    <footer>
-
+     <footer>
 			<!-- <img class="logo" src="images/foto.webp" alt="logo"> -->
-<div>
-<ul>
-	<p>OUR COLLECTION</p>
-	<li>Earrings</li>
-	<li>Necklaces</li>
-	<li>Initials</li>
-	<li>Bracelets</li>
-	<li>Earparty</li>
-	<li>Anklets</li>
-	<li>Silver</li>
-</ul>
+				<div>
+				<ul>
+					<p>OUR COLLECTION</p>
+					<li>Earrings</li>
+					<li>Necklaces</li>
+					<li>Initials</li>
+					<li>Bracelets</li>
+					<li>Earparty</li>
+					<li>Anklets</li>
+					<li>Silver</li>
+				</ul>
 
-<ul>
-	<p>INFORMATION</p>
-	<li>Our Story</li>
-	<li>Terms & Conditions</li>
-	<li>Privacy policy</li>
-	<li>Job Offers</li>
-	<li>Contact</li>
-	<li>Wholesale</li>
-</ul>
+				<ul>
+					<p>INFORMATION</p>
+					<li>Our Story</li>
+					<li>Terms & Conditions</li>
+					<li>Privacy policy</li>
+					<li>Job Offers</li>
+					<li>Contact</li>
+					<li>Wholesale</li>
+				</ul>
 
-<ul>
-	<p>CUSTOMER SERVICE</p>
-	<li>Contact</li>
-	<li>FAQ</li>
-	<li>Shipping info</li>
-	<li>Return Policy</li>
-</ul>
+				<ul>
+					<p>CUSTOMER SERVICE</p>
+					<li>Contact</li>
+					<li>FAQ</li>
+					<li>Shipping info</li>
+					<li>Return Policy</li>
+				</ul>
 
-<ul>
-	<p>ABOUT BY★NOUCK</p>
-	<p><em>Kleine Houtstraat 15, 2011 DD Haarlem, The Netherlands</em></p>
-	<li>*Free shipping only applicable for selected countries.</li>
-</ul>
-</div>
-
-
+				<ul>
+					<p>ABOUT BY★NOUCK</p>
+					<p><em>Kleine Houtstraat 15, 2011 DD Haarlem, The Netherlands</em></p>
+					<li>*Free shipping only applicable for selected countries.</li>
+				</ul>
+				</div>
 		</footer>
-
 			<script src="scripts/script.js"></script>
   </body>
 </html>
