--- a/index.html
+++ b/index.html
@@ -6,173 +6,143 @@
 	<meta name="author" content="Moon Warmer">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-
 	<title>By Nouck</title>
 
 	<link href="styles/style.css" rel="stylesheet">
 
 </head>
 
-<body>
-
+<body class='homepage'>
 
 <!--header-->
 
   <header>
-		<p><strong>Spend €75,00 and get 35% off code: MERRYXMAS</strong></p>
-			<img class="logo" src="images/foto.webp" alt="logo">
-		<nav class='hamburger' >
+		<p><strong>Join our newsletter and get 15% off on your first order</strong></p>
+		<img class="logo" src="images/foto.webp" alt="logo">
+		<ul>
+			<li><a href="https://www.facebook.com/bynouck/"><img src='images/facebook.svg' alt='facebook'/></a></li>
+			<li><a href="https://www.instagram.com/bynouck_jewelry/"><img src='images/instagram.svg' alt='instagram'/></a></li>
+		</ul>
+		<ul>
+			<li><a href="https://bynouck.com/products/1-5-cm-twisted-hoop"><img src='images/zoek.svg' alt='zoek'/></a></li>
+			<li><a href="https://bynouck.com/account/login"><img src='images/favorieten.svg' alt='favorieten'/></a></li>
+			<li><a href="https://bynouck.com/products/1-5-cm-twisted-hoop"><img src='images/winkelmandje.svg' alt='winkelmandje'/></a></li>
+		</ul>
+		<nav>
 			<button arial-label='menu button'>&#9776;</button>
-			<a href="https://bynouck.com/products/1-5-cm-twisted-hoop"><img src='images/zoek.svg' alt='zoek'/></a>
-			<a href="https://bynouck.com/account/login"><img src='images/favorieten.svg' alt='favorieten'/></a>
-			<a href="https://bynouck.com/products/1-5-cm-twisted-hoop"><img src='images/winkelmandje.svg' alt='winkelmandje'/></a>
-			<ul>
-				<li><a href="https://bynouck.com/collections/new">NEW</a></li>
-				<li><a href="https://bynouck.com/collections/earrings">EARRINGS</a></li>
-				<li><a href="https://bynouck.com/collections/charms">COLLECTIONS</a></li>
-				<li><a href="https://bynouck.com/collections/necklaces">NECKLACES</a></li>
-				<li><a href="https://bynouck.com/collections/initials">INITIALS</a></li>
-				<li><a href="https://bynouck.com/collections/engraving">ENGRAVINGS</a></li>
-				<li><a href="https://bynouck.com/collections/bracelets">BRACELETS</a></li>
-				<li><a href="https://bynouck.com/collections/silver">SILVER</a></li>
-				<li><a href="https://bynouck.com/collections/sale">SALE</a></li>
-			</ul>
+		<ul>
+			<li><a href="https://bynouck.com/collections/new">NEW</a></li>
+			<li><a href="https://bynouck.com/collections/earrings">EARRINGS</a></li>
+			<li><a href="https://bynouck.com/collections/charms">COLLECTIONS</a></li>
+			<li><a href="https://bynouck.com/collections/necklaces">NECKLACES</a></li>
+			<li><a href="https://bynouck.com/collections/initials">INITIALS</a></li>
+			<li><a href="https://bynouck.com/collections/engraving">ENGRAVINGS</a></li>
+			<li><a href="https://bynouck.com/collections/bracelets">BRACELETS</a></li>
+			<li><a href="https://bynouck.com/collections/silver">SILVER</a></li>
+			<li><a href="https://bynouck.com/collections/sale">SALE</a></li>
+		</ul>
 		</nav>
   </header>
 
-
      <!-- Main content -->
+
 	<main>
+    <section>
+		 <img src="images/nieuwefoto.webp" alt="foto ketting">
+		 <div>
+       <p> New in...</p>
+       <h2> Custom Engravings</h2>
+       <p>Our engraving collection connects you to your most precious memories, people and milestones.
+       </p>
+       <a href='https://bynouck.com/collections/engraving'>ENGRAVE YOUR OWN</a>
+		  </div>
+		</section>
 
-      <section>
-		<img src="images/nieuwefoto.webp" alt="foto ketting">
-		<div>
-        <p> New in...</p>
-        <h2> Custom Engravings</h2>
-        <p>Our engraving collection connects you to your most precious memories, people and milestones.
-          </p>
-        <a href='https://bynouck.com/collections/engraving'>ENGRAVE YOUR OWN</a>
-			</div>
-			</section>
-
-			<section>
-				<h3>Suggestions for you</h3>
-				<article>
-						<h4>1.5 cm Twisted Hoop</h4>
-					<img src="images/hoop.webp" alt="hoop">
-							<p>€16,00<p>
-							<a href="https://bynouck.com/products/1-5-cm-twisted-hoop">View product</a>
-							<a href="https://bynouck.com/products/1-5-cm-twisted-hoop"><img src='images/loop.svg' alt='view product'/></a>
-						</article>
-							<article>
-					<img src="images/oorbelroze.webp" alt="oorbelroze">
-				<h4>Earring Neon Pink Bead</h4>
-							<p>€16,00<p>
-					<a href="https://bynouck.com/products/earring-neon-pink-bead">View product</a>
-					<a href="https://bynouck.com/products/earring-neon-pink-bead"><img src='images/loop.svg' alt='view product'/></a>
+		<section>
+			<h3>Suggestions for you</h3>
+			 <article>
+			  <a href="detail.html">
+			   <h4>1.5 cm Twisted Hoop</h4>
+			   <img src="images/hoop.webp" alt="hoop">
+			   <p>€16,00</p>
+			  </a>
+			 </article>
+			 <article>
+				 <a href="detail.html">
+				  <h4>Earring Neon Pink Bead</h4>
+				  <img src="images/oorbelroze.webp" alt="oorbelroze">
+				  <p>€16,00</p>
+				 </a>
 				</article>
-					<article>
-					<img src="images/oorbelwit.webp" alt="oorbelwit">
+				<article>
+					<a href="detail.html">
 					<h4>Earring White Bead</h4>
-							<p>€16,00<p>
-									<a href="https://bynouck.com/products/earring-white-bead">View product</a>
-									<a href="detail.html"><img src='images/loop.svg' alt='view product'/></a>
-								</article>
-									<article>
-					<img src="images/oorbelgroen.webp" alt="oorgbelgroen">
-					<h4>Earpin Green Bead</h4>
-					<p>€14,40</p>
-						<a href="view">View product</a>
-						<a href="view"><img src='images/loop.svg' alt='view product'/></a>
-					</article>
-					<a href>SHOW ALL SUGGESTIONS</a>
+				  <img src="images/oorbelwit.webp" alt="oorbelwit">
+				  <p>€16,00</p>
+					</a>
+				</article>
+				<article>
+					<a href="detail.html">
+					 <h4>Earpin Green Bead</h4>
+					 <img src="images/oorbelgroen.webp" alt="oorgbelgroen">
+					 <p>€14,40</p>
+					</a>
+				</article>
+				  <a href="detail.html">SHOW ALL SUGGESTIONS</a>
 			</section>
 
-
 			<section>
-
-				<img src="images/plaatjescheef.png" alt="scheef plaatje">
+				<img src="images/handmadewlove.jpg" alt="sieraden">
 				<div>
 				<h2>Handmade with love</h2>
 				<p>Our designs are filled with hidden treasures and tiny details ready to take you on a special journey.
 					From pearls and rhinestones to initials. Enjoy our handmade jewellery everyday. Each order is being handcrafted
 					upon request in our Haarlem Atelier.</p>
-				<a href='https://bynouck.com/collections/new' >SHOP NEW</a>
+				<a href='https://bynouck.com/collections/new'>SHOP NEW</a>
 				</div>
-
 			</section>
-
-			<section>
-
-				<img src="images/oorbelwit.webp" alt="witte oorbel">
-				<div>
-					<img src="images/oorbelwit.webp" alt="witte oorbel">
-					<img src="images/meerdereoorbellen.webp" alt='meerdere oorbellen'>
-					<img src="images/oor1.webp" alt="oor foto 1">
-					<img src="images/oor2.webp" alt='oor foto 2'>
-				</div>
-				<div>
-					<h1>Earring White Bead</h1>
-					<p>€16,00</p>
-					<p>Price per piece (1)</p>
-					<p>For an earring set, please order 2 ore more items</p>
-					<p><em>EG-077</em></p>
-					<p>This classic BY★NOUCK piece goes perfect with all our golden and natural items. Also available as an <b>earring</b>.
-						 Mix and match with our other items.</p>
-						 <a href>add to cart</a>
-					<p><em>To Wishlist</em></p>
-					<ul>
-						<li>Spend €75,00 and get 35% off! Code: MERRYXMAS</li>
-						<li>Free Track & Trace shipping over € 75*</li>
-						<li>Handmade with love</li>
-						<li>High quality gold plated</li>
-					</ul>
-
-				</div>
-
-			 </section>
 
   </main>
 
-     <footer>
-			<!-- <img class="logo" src="images/foto.webp" alt="logo"> -->
-				<div>
-				<ul>
-					<p>OUR COLLECTION</p>
-					<li>Earrings</li>
-					<li>Necklaces</li>
-					<li>Initials</li>
-					<li>Bracelets</li>
-					<li>Earparty</li>
-					<li>Anklets</li>
-					<li>Silver</li>
-				</ul>
+<!--footer-->
 
-				<ul>
-					<p>INFORMATION</p>
-					<li>Our Story</li>
-					<li>Terms & Conditions</li>
-					<li>Privacy policy</li>
-					<li>Job Offers</li>
-					<li>Contact</li>
-					<li>Wholesale</li>
-				</ul>
+  <footer>
+	<img class="logo" src="images/foto.webp" alt="logo">
 
-				<ul>
-					<p>CUSTOMER SERVICE</p>
-					<li>Contact</li>
-					<li>FAQ</li>
-					<li>Shipping info</li>
-					<li>Return Policy</li>
-				</ul>
-
-				<ul>
-					<p>ABOUT BY★NOUCK</p>
-					<p><em>Kleine Houtstraat 15, 2011 DD Haarlem, The Netherlands</em></p>
-					<li>*Free shipping only applicable for selected countries.</li>
-				</ul>
-				</div>
-		</footer>
+	<div>
+		<ul>
+		  <p>OUR COLLECTION</p>
+			<li>Earrings</li>
+			<li>Necklaces</li>
+			<li>Initials</li>
+			<li>Bracelets</li>
+			<li>Earparty</li>
+			<li>Anklets</li>
+			<li>Silver</li>
+		</ul>
+		<ul>
+			<p>INFORMATION</p>
+			<li>Our Story</li>
+			<li>Terms & Conditions</li>
+			<li>Privacy policy</li>
+			<li>Job Offers</li>
+			<li>Contact</li>
+			<li>Wholesale</li>
+		</ul>
+		<ul>
+			<p>CUSTOMER SERVICE</p>
+			<li>Contact</li>
+			<li>FAQ</li>
+			<li>Shipping info</li>
+			<li>Return Policy</li>
+		</ul>
+		<ul>
+			<p>ABOUT BY★NOUCK</p>
+			<p><em>Kleine Houtstraat 15, 2011 DD Haarlem, The Netherlands</em></p>
+			<li>*Free shipping only applicable for selected countries.</li>
+		</ul>
+	 </div>
+	</footer>
 			<script src="scripts/script.js"></script>
   </body>
 </html>
