--- a/detail.html
+++ b/detail.html
@@ -13,28 +13,118 @@
 
 </head>
 
-<body>
-	<img class="logo" src="images/foto.webp" alt="logo">
-
+<body class='detailpagina'>
 
 <!--header-->
 
-  <header>
-		<nav class='hamburger' >
-			<button arial-label='menu button'>&#9776;</button>
-			<ul>
-				<li><a href="https://bynouck.com/collections/new">NEW</a></li>
-				<li><a href="https://bynouck.com/collections/earrings">EARRINGS</a></li>
-				<li><a href="https://bynouck.com/collections/charms">COLLECTIONS</a></li>
-				<li><a href="https://bynouck.com/collections/necklaces">NECKLACES</a></li>
-				<li><a href="https://bynouck.com/collections/initials">INITIALS</a></li>
-				<li><a href="https://bynouck.com/collections/engraving">ENGRAVINGS</a></li>
-				<li><a href="https://bynouck.com/collections/bracelets">BRACELETS</a></li>
-				<li><a href="https://bynouck.com/collections/silver">SILVER</a></li>
-				<li><a href="https://bynouck.com/collections/sale">SALE</a></li>
-			</ul>
-		</nav>
-  </header>
+<header>
+	<p><strong>Join our newsletter and get 15% off on your first order</strong></p>
+	<img class="logo" src="images/foto.webp" alt="logo">
+	<ul>
+		<li><a href="https://www.facebook.com/bynouck/"><img src='images/facebook.svg' alt='facebook'/></a></li>
+		<li><a href="https://www.instagram.com/bynouck_jewelry/"><img src='images/instagram.svg' alt='instagram'/></a></li>
+	</ul>
+	<ul>
+		<li><a href="https://bynouck.com/products/1-5-cm-twisted-hoop"><img src='images/zoek.svg' alt='zoek'/></a></li>
+		<li><a href="https://bynouck.com/account/login"><img src='images/favorieten.svg' alt='favorieten'/></a></li>
+		<li><a href="https://bynouck.com/products/1-5-cm-twisted-hoop"><img src='images/winkelmandje.svg' alt='winkelmandje'/></a></li>
+	</ul>
+	<nav class='hamburger' >
+		<button arial-label='menu button'>&#9776;</button>
 
+	<ul>
+		<li><a href="https://bynouck.com/collections/new">NEW</a></li>
+		<li><a href="https://bynouck.com/collections/earrings">EARRINGS</a></li>
+		<li><a href="https://bynouck.com/collections/charms">COLLECTIONS</a></li>
+		<li><a href="https://bynouck.com/collections/necklaces">NECKLACES</a></li>
+		<li><a href="https://bynouck.com/collections/initials">INITIALS</a></li>
+		<li><a href="https://bynouck.com/collections/engraving">ENGRAVINGS</a></li>
+		<li><a href="https://bynouck.com/collections/bracelets">BRACELETS</a></li>
+		<li><a href="https://bynouck.com/collections/silver">SILVER</a></li>
+		<li><a href="https://bynouck.com/collections/sale">SALE</a></li>
+	</ul>
+	</nav>
+</header>
+
+<main>
+	<section>
+
+		<img src="images/oorbelwit.webp" alt="witte oorbel">
+
+		<!-- <div class="carousel">
+			<img src="images/oorbelwit.webp" alt="witte oorbel">
+			<img src="images/meerdereoorbellen.webp" alt='meerdere oorbellen'>
+			<img src="images/oor1.webp" alt="oor foto 1">
+			<img src="images/oor2.webp" alt='oor foto 2'>
+		</div> -->
+
+		<div>
+			<h1>Earring White Bead</h1>
+			<p>€16,00</p>
+			<p>Price per piece (1)</p>
+			<p>For an earring set, please order 2 ore more items</p>
+			<p><em>EG-077</em></p>
+			<p>This classic BY★NOUCK piece goes perfect with all our golden and natural items. Also available as an <b>earring</b>.
+				 Mix and match with our other items.</p>
+
+		<select>
+			<option disabled selected>1</option>
+			<option value='2'>2</option>
+			<option value='3'>3</option>
+			<option value='4'>4</option>
+		</select>
+
+			<a href>add to cart</a>
+			<p><em>To Wishlist</em></p>
+		<ul>
+			<li>Spend €75,00 and get 35% off! Code: MERRYXMAS</li>
+			<li>Free Track & Trace shipping over € 75*</li>
+			<li>Handmade with love</li>
+			<li>High quality gold plated</li>
+		</ul>
+		</div>
+
+	 </section>
+ </main>
+
+ <footer>
+		<img class="logo" src="images/foto.webp" alt="logo">
+	<div>
+		<ul>
+			<p>OUR COLLECTION</p>
+			<li>Earrings</li>
+			<li>Necklaces</li>
+			<li>Initials</li>
+			<li>Bracelets</li>
+			<li>Earparty</li>
+			<li>Anklets</li>
+			<li>Silver</li>
+		</ul>
+		<ul>
+			<p>INFORMATION</p>
+			<li>Our Story</li>
+			<li>Terms & Conditions</li>
+			<li>Privacy policy</li>
+			<li>Job Offers</li>
+			<li>Contact</li>
+			<li>Wholesale</li>
+		</ul>
+		<ul>
+			<p>CUSTOMER SERVICE</p>
+			<li>Contact</li>
+			<li>FAQ</li>
+			<li>Shipping info</li>
+			<li>Return Policy</li>
+		</ul>
+		<ul>
+			<p>ABOUT BY★NOUCK</p>
+			<p><em>Kleine Houtstraat 15, 2011 DD Haarlem, The Netherlands</em></p>
+			<li>*Free shipping only applicable for selected countries.</li>
+		</ul>
+		</div>
+</footer>
+	<script src="scripts/script.js"></script>
+</body>
+</html>
 
      <!-- Main content -->
