--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<li><a href="https://www.instagram.com/bynouck_jewelry/"><img src='images/instagram.svg' alt='instagram'/></a></li>
 		</ul>
 		<ul>
-			<li><a href="https://bynouck.com/products/1-5-cm-twisted-hoop"><img src='images/zoek.svg' alt='zoek'/></a></li>
+			<li><a href="https://bynouck.com/products/1-5-cm-twisted-hoop"><img src='images/zoek.svg' alt='zoekicoon'/></a></li>
 			<li><a href="https://bynouck.com/account/login"><img src='images/favorieten.svg' alt='favorieten'/></a></li>
 			<li><a href="https://bynouck.com/products/1-5-cm-twisted-hoop"><img src='images/winkelmandje.svg' alt='winkelmandje'/></a></li>
 		</ul>
@@ -63,7 +63,7 @@
 			 <article>
 			  <a href="detail.html">
 			   <h4>1.5 cm Twisted Hoop</h4>
-			   <img src="images/hoop.webp" alt="hoop">
+			   <img src="images/hoop.webp" alt="ringoorbel">
 			   <p>€16,00</p>
 			  </a>
 			 </article>
